// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Golden Snapshot: ANOVA (Method-based) Scenario 1: significant + large effect 1`] = `
{
  "practical": "사후 검정을 수행하여 어느 그룹이 다른지 확인하세요.",
  "statistical": "적어도 하나의 그룹 평균이 통계적으로 다릅니다 (p=< 0.001).",
  "summary": "3개 그룹의 평균 범위는 45.00 ~ 58.00 (차이: 13.00)입니다.",
  "title": "다집단 비교 결과",
}
`;

exports[`Golden Snapshot: ANOVA (Method-based) Scenario 3: boundary case p ≈ 0.05 1`] = `
{
  "practical": "사후 검정을 수행하여 어느 그룹이 다른지 확인하세요.",
  "statistical": "적어도 하나의 그룹 평균이 통계적으로 다릅니다 (p=0.047).",
  "summary": "3개 그룹의 평균 범위는 48.00 ~ 53.00 (차이: 5.00)입니다.",
  "title": "다집단 비교 결과",
}
`;

exports[`Golden Snapshot: t-test (Purpose-based) Scenario 2: nonsignificant + small effect (purpose="비교") 1`] = `
{
  "practical": "실질적 효과 크기는 작은 효과입니다.",
  "statistical": "통계적으로 유의한 차이가 없습니다 (p=0.234).",
  "summary": "Control 평균(50.00)이 Treatment 평균(52.00)보다 2.00점 낮습니다.",
  "title": "그룹 비교 결과",
}
`;

exports[`Golden Snapshot: t-test (Purpose-based) Scenario 3: boundary case p ≈ 0.05 (purpose="비교") 1`] = `
{
  "practical": "실질적 효과 크기는 중간 효과입니다.",
  "statistical": "통계적으로 유의한 차이가 있습니다 (p=0.048).",
  "summary": "Control 평균(50.00)이 Treatment 평균(55.00)보다 5.00점 낮습니다.",
  "title": "그룹 비교 결과",
}
`;
